Hinweise zu den einzelnen Versuchen für die neue Praktikumsleitung hinzugefügt.

--- a/Versuch_0/Anleitung-0.tex
+++ b/Versuch_0/Anleitung-0.tex
@@ -1,6 +1,7 @@
 \chapter*{Vorversuch: Federpendel}
 \label{v:0}
 
+\etodo{\textbf{Prakikumsleitung:} Am Tag vor dem ersten Vorführversuch zusammen mit Hörsaal Vorbereitung aufbauen.}
 In diesem Versuch, der vor Beginn des Praktikums im Rahmen einer Einführungsveranstaltung zusammen mit der Praktikumsleitung und den Tutoren durchgeführt wird, wollen wir Ihnen einige der wichtigsten Aspekte zur Durchführung der Praktikumsversuche, der Auswertung der Messdaten, sowie zur Protokollierung des Versuchs aufzeigen.
 %------------------------------------------------
 \section{Stichworte}
