--- a/Versuch_1-2n/Anleitung-1.tex
+++ b/Versuch_1-2n/Anleitung-1.tex
@@ -1,6 +1,8 @@
 \chapter{Solarzelle und Halbleiterdiode}
 \label{v:17}
 
+\etodo{\textbf{Praktikumsleitung:} Halbleiter Solarzellen könnten durch Grätzelzellen, i.e. Farbstoff-basierte Solarzellen, ersetzt werden. Ein Versuchsset im Lager vorhanden.}
+
 Anhand der Charakteristiken von Halbleiterdioden und Solarzellen soll diese weit verbreitete Technologie näher gebracht werden.
 
 %------------------------------------------------
@@ -201,12 +203,11 @@ Im Versuch wird ein in aus 19 Einzelelementen geschaltetes Solarmodul verwendet.
 \section{Durchführung} 
 %------------------------------------------------
 
-%\begin{figure}[h]
-	%\centering
-		%\includegraphics[width=0.5\textwidth]{Abbildungen/Schaltung_Kennlinie.jpg}
-	%\label{fig:Schaltung_Kennlinie}
-	%\caption{Schaltung zur Messung der Kennlinie der Halbleiterdiode.}
-%\end{figure}
+\begin{hint}
+	Bei diesem Versuch ist es besonders wichtig, vor Versuchsbeginn zu testen, ob die Sicherungen der mA-Eingänge der Multimeter funktionieren. \\
+	Wenn kein Strom durch die Solarzelle fließt, ist meistens eine Sicherung kaputt. In über acht Jahren war noch nie eine Solarzelle oder ein Netzgerät das Problem!
+\end{hint}
+
 \begin{figure}[h]
 	\centering
 	\input{Abbildungen/Solarzelle_Messung_tikz.tex}
