--- a/Versuch_1-2n/Anleitung-2.tex
+++ b/Versuch_1-2n/Anleitung-2.tex
@@ -1,6 +1,8 @@
 \chapter{Stoss}
 \label{v:1}
 
+\etodo{\textbf{Praktikumsleitung:} Hier müssen ab und an die Fadenlängen der Pendel überprüft werden, damit beide Kugeln mittig hängen und sich überhaupt treffen können.}
+
 In diesem Versuch werden die Grundlagen des inelastischen Sto{\ss}es am Beispiel eines Fadenpendels studiert. Das Fadenpendel ist auch heute noch eines der genauesten Instrumente zur Bestimmung der Erdbeschleunigung.
 
 %\noindent
