--- a/Versuch_13-14n/Anleitung-13.tex
+++ b/Versuch_13-14n/Anleitung-13.tex
@@ -1,6 +1,8 @@
 \chapter{Thermoelement}
 \label{v:11}
 
+\etodo{\textbf{Praktikumsleitung:} Vor Versuchsbeginn einen Eimer mit crushed Eis aus dem Lager zur Verfügung stellen.}
+
 Ein Thermoelement wandelt Wärme in elektrische Energie um. In diesem Versuch soll das Thermoelement zur Messung einer Temperatur benutzt werden.
 
 %------------------------------------------------
@@ -72,8 +74,12 @@ Entfernt man das Voltmeter und schließt den Kreis, so treibt diese Thermospannu
 %------------------------------------------------
 
 \begin{hint}
-Bitte achten Sie darauf, dass keine der Kabel mit der heißen Kochplatte in Berührung kommen!
+	Bitte achten Sie darauf, dass keine der Kabel mit der heißen Kochplatte in Berührung kommen!
 \end{hint}
+
+\begin{tutorhint}
+	Hier ist zu beachten, dass das Vorzeichen der Spannung zwischen den beiden Seiten des Thermoelements vom Vorzeichen der Temperaturdifferenz abhängt. Da die vorhandenen Spannungsmessgeräte nur positive Werte anzeigen muss also die richtige Seite des Thermoelements warm sein!
+\end{tutorhint}
 
 \begin{enumerate}
  %
