--- a/Versuch_13-14n/Anleitung-14.tex
+++ b/Versuch_13-14n/Anleitung-14.tex
@@ -1,6 +1,8 @@
 \chapter{Ultraschall}
 \label{vn:2}
 
+\etodo{\textbf{Praktikumsleitung:} Vor Versuchsbeginn einen Eimer mit crushed Eis aus dem Lager zur Verfügung stellen. Sicher stellen, dass genügend Kochsalz vorhanden ist (für ein ganzes Semester reichen 12-15 Pakete.}
+
 In diesem Versuch werden Eigenschaften der Ausbreitung von Wellen in Medien anhand einiger Anwendungen von Ultraschall untersucht.
 %
 %------------------------------------------------
@@ -243,6 +245,8 @@ In der Menüleiste des Programms auf die volle Zeitachse stellen (der Knopf nebe
 		%
 		\item Stellen Sie nun mit dem Kochsalz Lösungen von 25, 50, 75, 100, 150, 200, 250~g/l her und messen Sie jeweils die Laufzeitdifferenz des Ultraschallpulses mit Hilfe des zweiten Cursors. Bevor Sie die  Messung durchführen können müssen die Salzkristalle komplett gelöst sein. Wieso ist das so?\\ 
 		Schätzen Sie die Unsicherheit der Kochsalzkonzentration Ihrer Lösung ab.
+		%
+		\item Bitte waschen Sie die Schale mit der Salzlösung nach Ende des Versuchs ordentlich unter fließendem Wasser aus. Ansonsten bilden die Rückstände Salzblumen, die zwar schön anzusehen sind, aber die Messungen der nächsten VersuchsteilnehmerInnen verfälschen.
 	\end{enumerate}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	% Teil 3: Alternativ für Geowissenschaftler
