--- a/Versuch_15-16n/Anleitung-16.tex
+++ b/Versuch_15-16n/Anleitung-16.tex
@@ -1,6 +1,9 @@
 \chapter{Nichtstationäre Diffusion}
 \label{v:14}
 
+\etodo{\textbf{Praktikumsleitung:} Messung funktioniert nicht besonders gut, da die Küvetten immer stärker verschmutzt werden. Damit wird der Kontrast ohne und mit Tinte schlechter. Leider nicht zu ändern.\\
+Nach Versuchsende sicherstellen, dass Küvetten ausgewaschen wurden.}
+
 In diesem Versuch betrachten Sie, wie ein Farbstoff in Wasser diffundiert. Dabei messen Sie die momentane Konzentration des Farbstoffes mithilfe eines lichtempfindlichen Widerstandes.
 
 %------------------------------------------------
