--- a/Versuch_17-18n/Anleitung-17.tex
+++ b/Versuch_17-18n/Anleitung-17.tex
@@ -1,6 +1,8 @@
 \chapter{Künstliche Radioaktivität}
 \label{v:19}
 
+\etodo{\textbf{Praktikumsleitung:} Vor Versuchsbeginn die Neutronenquelle aus dem Lager in den dafür vorgesehenen Raum bringen.}
+
 In diesem Versuch studieren Sie die Grundlagen radioaktiver Zerfälle, wie z. Bsp. das zeitliche Abklingverhalten.
 
 %------------------------------------------------
