--- a/Versuch_19-20n/Anleitung-20.tex
+++ b/Versuch_19-20n/Anleitung-20.tex
@@ -1,6 +1,8 @@
 \chapter{Molare Wärmekapazität von Luft}
 \label{v:6}
 
+\etodo{\textbf{Praktikumsleitung:} Nach Versuchsende sicherstellen, dass die Ventile an den Zylindern offen sind. Ansonsten wird, durch das Zusammenziehen beim Abkühlen der Luft im Zylinder, Wasser aus dem U-Rohr in den Zylinder gesaugt, welches mit der Zeit den Heizdraht korrodiert.}
+
 Im Versuch soll die Wärmekapazität eines Gases (hier: Luft) bestimmt werden.
 
 %------------------------------------------------
