--- a/Versuch_3-4n/Anleitung-3.tex
+++ b/Versuch_3-4n/Anleitung-3.tex
@@ -1,6 +1,8 @@
 \chapter{Wechselstrom und R-C-Kreis}
 \label{v:15}
 
+\etodo{\textbf{Praktikumsleitung:} Viele der Tutoren können selbst nicht sicher mit einem Oszi umgehen. Gerade mit neuen Tutoren sollte man diesen Versuch vorher kurz duchgehen und die Bedienung des Oszis erklären.}
+
 In diesem Versuch lernen Sie die Grundlagen der Funktion und Bedienung eines Digital-Speicher-Oszilloskops (DSO), sowie die Auf- und Entladekurve eines Kondensators kennen.
 
 \begin{hint}
