--- a/Versuch_3-4n/Anleitung-4.tex
+++ b/Versuch_3-4n/Anleitung-4.tex
@@ -1,6 +1,8 @@
 \chapter{Spule und Transformator}
 \label{v:16}
 
+\etodo{\textbf{Praktikumsleitung:} Hier gehen sehr viele Sicherungen von Multimetern kaputt. Sogar die 16A Sicherungen sind manchmal nicht genug...}
+
 In diesem Versuch lernen Sie einige Eigenschaften von Spulen und Transformatoren kennen.
 
 %------------------------------------------------
