--- a/Versuch_7-8n/Anleitung-7.tex
+++ b/Versuch_7-8n/Anleitung-7.tex
@@ -1,6 +1,8 @@
 \chapter{Kapillarität und Auftrieb}
 \label{v:3}
 
+\etodo{\textbf{Praktikumsleitung:} Vor Beginn des Versuchs die ''gebrauchten'' farbigen Flüssigkeiten in die Flasche der zu benutzenden umfüllen. Siehe Dokument Orga.}
+
 In diesem Versuch lernen Sie, wie man die Oberflächenspannung von Flüssigkeiten misst, sowie eine Methode zur Bestimmung der Dichte einer unbekannten Flüssigkeit.
 
 %------------------------------------------------
@@ -145,7 +147,7 @@ Jede der Kapillaren wird mit der Einrichtung im Raum gesäubert. Dazu gehören a
 \end{enumerate}
 %
 \begin{hint}
-	In den nachfolgenden Versuchsteilen (3 \& 4) geht es viel schneller wenn man jeweils die Versuche Steighöhen messen und Mohr'sche Waage hintereinander mit einer Flüssigkeit durchführt.
+	In den nachfolgenden Versuchsteilen (4 \& 5) geht es viel schneller wenn man jeweils die Versuche Steighöhen messen und Mohr'sche Waage hintereinander mit einer Flüssigkeit durchführt.
 \end{hint}
 
 Hier soll mit drei verschiedenen Flüssigkeiten gemessen werden: Wasser, Äthylenglykol, Methylalkohol. Die letzten beiden befinden sich im Eingangsbereich des Versuchsraums.
