--- a/Versuch_17-18n/Anleitung-18.tex
+++ b/Versuch_17-18n/Anleitung-18.tex
@@ -4,7 +4,7 @@
 In diesem Versuch wird die historische Messung der spezifischen Elektronenladung (fast originalgetreu) nachvollzogen. Dabei lernen Sie Techniken moderner Teilchenbeschleuniger und Massenspektrometer kennen.
 
 \begin{hint}
-Eine der ersten Messungen der spezifischen Elektronenladung gelang Johann Emil Wiechert , der das Elektron etwa zeitgleich mit Joseph John Thompson entdeckte, der dafür den Nobelpreis erhielt.\\ 
+Eine der ersten Messungen der spezifischen Elektronenladung gelang Johann Emil Wiechert, der das Elektron etwa zeitgleich mit Joseph John Thompson entdeckte, welcher dafür den Nobelpreis erhielt.\\ 
 Wiechert arbeitete ab 1897 an der Universität Göttingen und erhielt hier 1898 den Ruf auf die weltweit erste Professur für Geophysik.
 \end{hint}
 
